--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+}
+
+.todoContainer {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-logo {
@@ -35,4 +42,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 28px 16px 0;
+  float: left;
+}
+
+.site-layout-background {
+  background: #fff;
 }
