--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,6 @@
   margin: 16px;
 }
 
-.site-layout .site-layout-background {
+/* .site-layout .site-layout-background {
   background: #fff;
-}
+} */
