--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,17 @@
   margin: 16px;
 }
 
-/* .site-layout .site-layout-background {
+.site-layout .site-layout-background {
   background: #fff;
-} */
+}
+
+.card-layout {
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.ant-statistic-title {
+  color: #fff;
+  font-size: medium;
+}
